--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: tonic-starter
-description: ""
+title: Jekyll theme
+description: "My first, but ambitious Jekyll theme"
 encoding: utf-8
 
 exclude: ["README.md", "LICENSE", "*.gem", "*.gemspec", "Gemfile.lock"]
